--- a/change-color-react/package.json
+++ b/change-color-react/package.json
@@ -2,7 +2,7 @@
   "name": "change-color-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://paolojr90.github.io/change-color-react/",
+  "homepage": "https://paolojr90.github.io/react-apps/change-color-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
