--- a/react-apps/change-color-react_source/package.json
+++ b/react-apps/change-color-react_source/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": "https://paolojr.github.io/javascript/react-apps/change-color-react/",
   "dependencies": {
-    "sass": "1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sass": "^1.90.0"
   },
   "scripts": {
     "start": "react-scripts start",
