--- a/react-apps/fetch-filter-react_source/package.json
+++ b/react-apps/fetch-filter-react_source/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://paolojr.github.io/javascript/react-apps/fetch-filter-react/",
   "dependencies": {
     "lodash": "^4.17.21",
-    "node-sass": "^9.0.0",
+    "sass": "1.90.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
